--- a/sysdrv/tools/board/nginx/Makefile
+++ b/sysdrv/tools/board/nginx/Makefile
@@ -11,10 +11,10 @@ BUILD_TARGET_OUT := ${CURRENT_DIR}/out
 INSTALL_TARGET := ${BUILD_TARGET_OUT}/sbin/nginx
 
 LIB_OPENSSL=${CURRENT_DIR}/../toolkits/openssl/
-LIB_PRCE2=${CURRENT_DIR}/../prce2/
+LIB_PCRE2=${CURRENT_DIR}/../prce2/
 LIB_ZLIB=${CURRENT_DIR}/../toolkits/zlib/
 
-all:lib_openssl lib_prce2 lib_zlib
+all:lib_openssl lib_pcre2 lib_zlib
 	@test -f $(INSTALL_TARGET) || ( \
 		rm -rf ${BUILD_TARGET_DIR} ${BUILD_TARGET_OUT}; \
 		tar -xf ${BUILD_TARGET}; \
@@ -25,8 +25,8 @@ all:lib_openssl lib_prce2 lib_zlib
 			--with-http_ssl_module \
 			--with-cc=${SYSDRV_CROSS}-gcc \
  			--with-cpp=${SYSDRV_CROSS}-g++ \
- 			--with-cc-opt="-I ${LIB_PRCE2}/out/include -I ${LIB_OPENSSL}/out3/include -I ${LIB_ZLIB}/out/include" \
- 			--with-ld-opt="-L ${LIB_PRCE2}/out/lib -L ${LIB_OPENSSL}/out3/lib -L ${LIB_ZLIB}/out/lib" \
+ 			--with-cc-opt="-I ${LIB_PCRE2}/out/include -I ${LIB_OPENSSL}/out3/include -I ${LIB_ZLIB}/out/include" \
+ 			--with-ld-opt="-L ${LIB_PCRE2}/out/lib -L ${LIB_OPENSSL}/out3/lib -L ${LIB_ZLIB}/out/lib" \
  			--without-http_upstream_zone_module; \
 			patch -p1 < ../make.patch; \
 			make -j$(SYSDRV_JOBS); \
@@ -39,8 +39,8 @@ all:lib_openssl lib_prce2 lib_zlib
 lib_openssl:
 	make -C ${LIB_OPENSSL}
 
-lib_prce2:
-	make -C ${LIB_PRCE2}
+lib_pcre2:
+	make -C ${LIB_PCRE2}
 
 lib_zlib:
 	make -C ${LIB_ZLIB}
