--- a/sysdrv/tools/board/buildroot/busybox.config
+++ b/sysdrv/tools/board/buildroot/busybox.config
@@ -957,7 +957,7 @@ CONFIG_NETSTAT=y
 CONFIG_NSLOOKUP=y
 CONFIG_FEATURE_NSLOOKUP_BIG=y
 CONFIG_FEATURE_NSLOOKUP_LONG_OPTIONS=y
-# CONFIG_NTPD is not set
+CONFIG_NTPD=y
 # CONFIG_FEATURE_NTPD_SERVER is not set
 # CONFIG_FEATURE_NTPD_CONF is not set
 # CONFIG_FEATURE_NTP_AUTH is not set
