buildroot: ubi img

--- a/sysdrv/tools/board/buildroot/rv1106_defconfig
+++ b/sysdrv/tools/board/buildroot/rv1106_defconfig
@@ -21,3 +21,7 @@ BR2_PACKAGE_COREMARK=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="128M"
+BR2_TARGET_ROOTFS_UBI=y
+BR2_TARGET_ROOTFS_UBI_SUBSIZE=2048
+BR2_TARGET_ROOTFS_UBIFS_LEBSIZE=0x1f000
+BR2_TARGET_ROOTFS_UBIFS_MAXLEBCNT=644
