Pico Max: 切换为buildroot文件系统

--- a/sysdrv/tools/board/buildroot/rv1106_defconfig
+++ b/sysdrv/tools/board/buildroot/rv1106_defconfig
@@ -24,4 +24,5 @@ BR2_TARGET_ROOTFS_EXT2_SIZE="128M"
 BR2_TARGET_ROOTFS_UBI=y
 BR2_TARGET_ROOTFS_UBI_SUBSIZE=2048
 BR2_TARGET_ROOTFS_UBIFS_LEBSIZE=0x1f000
-BR2_TARGET_ROOTFS_UBIFS_MAXLEBCNT=644
+BR2_TARGET_ROOTFS_UBIFS_MAXLEBCNT=624
+BR2_TARGET_ROOTFS_UBIFS_OPTS="-F"
