--- a/sysdrv/tools/board/buildroot/rv1106_defconfig
+++ b/sysdrv/tools/board/buildroot/rv1106_defconfig
@@ -17,6 +17,12 @@ BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_SYSTEM_DHCP="eth0"
 BR2_SYSTEM_ENABLE_NLS=y
 BR2_ROOTFS_OVERLAY="../../../../output/out/rootfs_uclibc_rv1106/"
+BR2_PACKAGE_ALSA_UTILS=y
+BR2_PACKAGE_ALSA_UTILS_ALSACONF=y
+BR2_PACKAGE_ALSA_UTILS_ACONNECT=y
+BR2_PACKAGE_ALSA_UTILS_AMIXER=y
+BR2_PACKAGE_ALSA_UTILS_APLAY=y
+BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_COREMARK=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
