--- a/sysdrv/tools/board/toolkits/libnl/Makefile
+++ b/sysdrv/tools/board/toolkits/libnl/Makefile
@@ -1,8 +1,8 @@
 CURRENT_DIR := $(shell pwd)
 export SHELL:=/bin/bash
 
-BUILD_TARGET := ${CURRENT_DIR}/libnl-3.8.0.tar.gz
-BUILD_TARGET_DIR := ${CURRENT_DIR}/libnl-3.8.0
+BUILD_TARGET := ${CURRENT_DIR}/libnl-3.11.0.tar.gz
+BUILD_TARGET_DIR := ${CURRENT_DIR}/libnl-3.11.0
 BUILD_TARGET_OUT := ${CURRENT_DIR}/out
 
 
@@ -16,7 +16,9 @@ all:
 			make -j$(SYSDRV_JOBS); \
 			make install; \
 		popd;)
-	cp -rfp $(BUILD_TARGET_OUT)/lib/libnl-3.so* $(BUILD_TARGET_OUT)/lib/libnl-route-3.so* $(BUILD_TARGET_OUT)/lib/libnl-genl-3.so*  $(SYSDRV_DIR_OUT_ROOTFS)/usr/lib;
+	test -z "$(SYSDRV_DIR_OUT_ROOTFS)" || ( \
+	cp -rfp $(BUILD_TARGET_OUT)/lib/libnl-3.so* $(BUILD_TARGET_OUT)/lib/libnl-route-3.so* $(BUILD_TARGET_OUT)/lib/libnl-genl-3.so*  $(SYSDRV_DIR_OUT_ROOTFS)/usr/lib; \
+	)
 
 clean:
 	-rm -rf $(BUILD_TARGET_DIR) ${BUILD_TARGET_OUT}
