--- a/project/ab/system.cfg
+++ b/project/ab/system.cfg
@@ -13,5 +13,6 @@ vol_id=1
 vol_type=dynamic
 vol_name=rootfs
 vol_alignment=1
-vol_size=50MiB
+vol_size=40MiB
+vol_flags=autoresize
 image=../../sysdrv/source/buildroot/buildroot-2023.02.6/output/images/rootfs.ubifs
