--- a/sysdrv/source/uboot/u-boot/cmd/Kconfig
+++ b/sysdrv/source/uboot/u-boot/cmd/Kconfig
@@ -1742,3 +1742,9 @@ config CMD_UBIFS
 	  UBIFS is a file system for flash devices which works on top of UBI.
 
 endmenu
+
+config CMD_ABBOOT
+    bool "Enable my custom command"
+    default y
+    help
+      Enable support for my custom command.
