--- a/sysdrv/tools/board/uboot/luckfox_rv1106_uboot_defconfig
+++ b/sysdrv/tools/board/uboot/luckfox_rv1106_uboot_defconfig
@@ -143,3 +143,8 @@ CONFIG_SPL_GZIP=y
 CONFIG_ERRNO_STR=y
 # CONFIG_EFI_LOADER is not set
 CONFIG_CMD_ABBOOT=y
+CONFIG_CMD_UBI=y
+CONFIG_MTD_UBI=y
+CONFIG_CMD_UBIFS=y  # 如果需要挂载 UBIFS
+CONFIG_CMD_BDI=y
+CONFIG_MTDIDS_DEFAULT="spi-nand0=spi-nand0"
