--- a/sysdrv/source/uboot/u-boot/configs/rk-sfc.config
+++ b/sysdrv/source/uboot/u-boot/configs/rk-sfc.config
@@ -1,1 +1,6 @@
 CONFIG_ROCKCHIP_SFC_IOMUX=y
+CONFIG_CMD_UBI=y
+CONFIG_MTD_UBI=y
+CONFIG_CMD_UBIFS=y  # 如果需要挂载 UBIFS
+CONFIG_CMD_BDI=y
+CONFIG_MTDIDS_DEFAULT="spi-nand0=spi-nand0"
