--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv1106g-luckfox-pico-ultra-w.dts
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv1106g-luckfox-pico-ultra-w.dts
@@ -165,8 +165,8 @@
 /**********USB**********/
 &usbdrd_dwc3 {
 	status = "okay";
-	dr_mode = "peripheral";
-  #dr_mode = "host";
+  	dr_mode = "host";
+	// dr_mode = "peripheral";
 };
 
 /**********RTC**********/
