--- a/sysdrv/Makefile
+++ b/sysdrv/Makefile
@@ -604,6 +604,7 @@ buildroot_create:
 	rm $(BUILDROOT_DIR)/$(BUILDROOT_VER) -rf ;\
 	mkdir -p $(BUILDROOT_DIR)
 	tar xzf $(SYSDRV_DIR)/tools/board/buildroot/$(BUILDROOT_VER).tar.gz -C $(BUILDROOT_DIR)
+	rm -rf $(BUILDROOT_DIR)/configs/*
 	cp $(SYSDRV_DIR)/tools/board/buildroot/luckfox_pico_defconfig $(BUILDROOT_DIR)/$(BUILDROOT_VER)/configs/
 	cp $(SYSDRV_DIR)/tools/board/buildroot/luckfox_pico_w_defconfig $(BUILDROOT_DIR)/$(BUILDROOT_VER)/configs/
 	cp $(SYSDRV_DIR)/tools/board/buildroot/busybox.config $(BUILDROOT_DIR)/$(BUILDROOT_VER)/package/busybox/
@@ -617,6 +618,7 @@ buildroot: prepare
 	test -d $(BUILDROOT_DIR)/$(BUILDROOT_VER) || (\
 		mkdir -p $(BUILDROOT_DIR) ;\
 		tar xzf $(SYSDRV_DIR)/tools/board/buildroot/$(BUILDROOT_VER).tar.gz -C $(BUILDROOT_DIR) ;\
+		rm -rf $(BUILDROOT_DIR)/$(BUILDROOT_VER)/configs/* ;\
 	);
 
 	cp $(SYSDRV_DIR)/tools/board/buildroot/luckfox_pico_defconfig $(BUILDROOT_DIR)/$(BUILDROOT_VER)/configs/ ;\
