--- a/sysdrv/source/kernel/arch/arm/configs/luckfox_rv1106_linux_defconfig
+++ b/sysdrv/source/kernel/arch/arm/configs/luckfox_rv1106_linux_defconfig
@@ -145,6 +145,9 @@ CONFIG_USB_NET_RNDIS_HOST=y
 CONFIG_WL_ROCKCHIP=m
 CONFIG_WIFI_BUILD_MODULE=y
 # CONFIG_BCMDHD is not set
+CONFIG_INPUT_MOUSEDEV=y
+CONFIG_INPUT_MOUSEDEV_SCREEN_X=800
+CONFIG_INPUT_MOUSEDEV_SCREEN_Y=480
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_ADC=y
 # CONFIG_KEYBOARD_ATKBD is not set
@@ -236,8 +239,6 @@ CONFIG_SND_SOC_ROCKCHIP=y
 CONFIG_SND_SOC_ROCKCHIP_I2S_TDM=y
 CONFIG_SND_SOC_RV1106=y
 CONFIG_SND_SIMPLE_CARD=y
-# CONFIG_HID is not set
-# CONFIG_USB_HID is not set
 CONFIG_USB=y
 CONFIG_USB_OTG=y
 CONFIG_USB_XHCI_HCD=y
